# BitTrain

./: .gitignore  CITATION.cff  LICENSE  Makefile  README.md  setup.py
baselines/: bias_only_training.py  freeze_feature_extractor.py  full_retraining.py  run_baseline.py
baselines/utils/: dataset.py  datasets.py  model.py  train.py
cpp/: CMakeLists.txt  README.md
cpp/include/tbitmap/: tbitmap.h
cpp/src/: example.cpp  tbitmap.cpp
edgify/: README.md  version.py
edgify/functional/: __init__.py  bitmap.py  conv2d.py  dense.py  linear.py  relu.py
edgify/models/: resnet.py
edgify/models/base/: __init__.py  base.py  bitmap.py  dense.py
edgify/profiling/: functions.py  memory.py  profile.py  test.py
edgify/sparse/: BitmapTensor.cpp  __init__.py  bitmap_tensor.py  setup.py
expr/: README.md  profile_mobile_net.py  profiling_example.py
expr/baselines/: profile.py  run.sh  run_baseline.py
expr/sparse/: profile_sparse.py  train_sparse.py
expr/utils/: dataset.py  model.py  sparsity_stats.py  train.py
expr/viz/: activations_sparsity_analysis.py  param_activ_analysis.py  sparse_dense_analysis.py
test/: profile_mobile_net.py  profiling_example.py  test_bitmap_tensor.py  test_resnet.py  test_resnet_dense.py  test_resnet_sparse.py
